--- a/BulkyWeb/Views/_ViewImports.cshtml
+++ b/BulkyWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using BulkyWeb
+@using BulkyWeb.Core.Models
 @using BulkyWeb.Core.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, BulkyWeb
