--- a/BulkyWeb/Views/Categories/Index.cshtml
+++ b/BulkyWeb/Views/Categories/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<Category>
-
+@inject Microsoft.AspNetCore.Antiforgery.IAntiforgery antiforgery
 
 @{
     ViewData["Title"] = "Categories";
@@ -22,7 +22,10 @@
             </div>
             <div class="col-auto">
                 <div class="card-toolbar">
-                    <a asp-controller="Categories" asp-action="Create" class="btn btn-md btn-info">
+                    <a class="btn btn-md btn-info js-render-model"
+                       href="javascript:;"
+                       data-title="Add Category" data-status="add"
+                       data-url="/Categories/Create">
                         <i class="bi bi-plus-square me-1"></i>
                         Add
                     </a>
@@ -50,18 +53,24 @@
                     <tr>
                         <th>Category Name</th>
                         <th>Display Order</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
                     @foreach (var category in Model)
                     {
-                        <tr>
-                            <td>@category.Name</td>
-                            <td>@category.DisplayOrder</td>
-                        </tr>
+                        <partial name="_CategoryRow" model="@category" />
                     }
                 </tbody>
             </table>
         }
     </div>
 </div>
+
+<input type="hidden" name="__RequestVerificationToken" value="@antiforgery.GetAndStoreTokens(Context).RequestToken" />
+
+
+@section Scripts
+{
+    <partial name="_ValidationScriptsPartial">
+}
