--- a/BulkyWeb/Views/Categories/_Form.cshtml
+++ b/BulkyWeb/Views/Categories/_Form.cshtml
@@ -2,8 +2,10 @@
 
 <form data-ajax-method="post" 
       data-ajax="true"
+      data-ajax-begin="onModalBegin"
       data-ajax-success="onModalSuccess"
       data-ajax-failure="showErrorMessage"
+      data-ajax-complete="onModalComplete"
       asp-action="@(Model?.Id > 0? "Edit" : "Create")">
 
     @if (Model?.Id > 0)
