Add MVC Area and move Controllers and Views to it

--- a/BulkyWeb/Areas/Admin/Views/Categories/Index.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Categories/Index.cshtml
@@ -25,7 +25,7 @@
                     <a class="btn btn-md btn-info js-render-model"
                        href="javascript:;"
                        data-title="Add Category" data-status="add"
-                       data-url="/Categories/Create">
+                       data-url="/Admin/Categories/Create">
                         <i class="bi bi-plus-square me-1"></i>
                         Add
                     </a>
