--- a/BulkyWeb/Areas/Admin/Views/Categories/_CategoryRow.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Categories/_CategoryRow.cshtml
@@ -12,14 +12,14 @@
                     <a href="javascript:;" class="dropdown-item js-render-model"
                        data-title="Edit Category" data-status="edit"
                        data-update="true"
-                       data-url="/Categories/Edit/@Model.Id">
+                       data-url="/Admin/Categories/Edit/@Model.Id">
                         Edit
                     </a>
                 </li>
                 <li>
                     <a href="javascript:;" class="dropdown-item js-render-model"
                        data-title="Delete Category" data-status="delete"
-                       data-url="/Categories/Delete/@Model.Id">
+                       data-url="/Admin/Categories/Delete/@Model.Id">
                         Delete
                     </a>
                 </li>
