--- a/BulkyWeb/Views/Shared/_header.cshtml
+++ b/BulkyWeb/Views/Shared/_header.cshtml
@@ -8,13 +8,13 @@
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="Home" asp-action="Index" active-when="Home">
+                        <a class="nav-link" asp-area="Customer" asp-controller="Home" asp-action="Index" active-when="Home">
                             Home
                             <span class="visually-hidden">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="Categories" asp-action="Index" active-when="Categories">Category</a>
+                        <a class="nav-link" asp-area="Admin" asp-controller="Categories" asp-action="Index" active-when="Categories">Category</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
